# video-intelligence-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  config.yml.example  docker-compose.yml  ingest.py  pyproject.toml  requirements.txt
adapters/: __init__.py  base.py  frigate.py
api/: main.py
core/: __init__.py  events.py  schema.py
db/: __init__.py  models.py  session.py
docker/: docker-compose.frigate.yml  docker-compose.postgres.yml  frigate.config.example.yml
llm/: __init__.py  client.py
plugins/: __init__.py  base.py  manager.py  simple_plugin.py
skills/: __init__.py  aggregate.py  search.py
